--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 1.11
+date:    Sun Mar 21 04:04:25 PST 2004
+changes:
+- Acme Becomes One With The UNIVERSAL.
+---
 version: 1.00
 date:    Sun Mar 21 02:36:07 PST 2004
 changes:
