Import of INGY/Acme-1.111 from CPAN.
gitpan-cpan-distribution: Acme
gitpan-cpan-version:      1.111
gitpan-cpan-path:         INGY/Acme-1.111.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 1.111
+date:    
+changes:
+- Acme is teh_shiznit
+- Export Spiffy acme()
+---
 version: 1.11
 date:    Sun Mar 21 04:04:25 PST 2004
 changes:
