--- a/README
+++ b/README
@@ -2,13 +2,21 @@ NAME
     Acme - The Base of Perfection
 
 SYNOPSIS
+        use Acme;
+        print "Acme!" if acme->is_acme and acme->is_perfect;
+
+    or:
+
         print "Acme!" if MyModule->is_acme;
         print "Acme!" if MyModule->is_perfect;
         print "Acme!" if MyModule->is_the_highest_point_or_stage;
         print "Acme!" 
           if MyModule->is_one_that_represents_perfection_of_the_thing_expressed;
         print "Acme!" if MyModule->is_the_bizzity_bomb;
+        print "Acme!" if MyModule->is_teh_shiznit;
         print "Acme!" if MyModule->is_spiffy;
+
+        print "Not!" unless YourModule->is_spiffy;
 
         package MyModule;
         use Acme '-base';
@@ -22,18 +30,21 @@ DESCRIPTION
 
 IMPLEMENTATION
     Acme is a subclass of Spiffy.pm. As a bonus, your perfect classes will
-    be *spiffy* as well. QED.
+    be *spiffy* as well.
+
+    Acme also exports a function called "acme" that returns a new Acme
+    object. (which is_perfect).
 
 NOTE
     The dictionary defines 'Spiffy':
 
-        Said of programs having a pretty, clever, or exceptionally well-
-        designed interface.
+        *Said of programs having a pretty, clever, or exceptionally
+        well-designed interface.*
 
     How perfect!
 
 BUGS
-    None. This module *is_perfect*!
+    This module is_perfect.
 
 AUTHOR
     Brian Ingerson <INGY@cpan.org>
