--- a/README
+++ b/README
@@ -10,7 +10,7 @@ SYNOPSIS
         print "Acme!" if MyModule->is_acme;
         print "Acme!" if MyModule->is_perfect;
         print "Acme!" if MyModule->is_the_highest_point_or_stage;
-        print "Acme!" 
+        print "Acme!"
           if MyModule->is_one_that_represents_perfection_of_the_thing_expressed;
         print "Acme!" if MyModule->is_the_bizzity_bomb;
         print "Acme!" if MyModule->is_teh_shiznit;
@@ -37,8 +37,8 @@ IMPLEMENTATION
 NOTE
     The dictionary defines 'Spiffy':
 
-        *Said of programs having a pretty, clever, or exceptionally
-        well-designed interface.*
+    *Said of programs having a pretty, clever, or exceptionally
+    well-designed interface.*
 
     How perfect!
 
@@ -48,12 +48,11 @@ BUGS
 AUTHOR
     Ingy döt Net <ingy@cpan.org>
 
-COPYRIGHT AND LICENSE
-    Copyright (c) 2006, 2011. Ingy döt Net. Copyright (c) 2004, 2005. Brian
-    Ingerson.
+Copyright and License
+    Copyright (c) 2004-2014. Ingy döt Net.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
 
-    See http://www.perl.com/perl/misc/Artistic.html
+    See <http://www.perl.com/perl/misc/Artistic.html>
 
