--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.1111111111 Fri Aug 15 19:15:18 PDT 2014
+ - Perfected Acme by adding t/000-compile-modules.t
+
 1.111111111 Sun Aug  3 21:10:23 PDT 2014
  - Perfected Acme.pm
  - Fixed Meta and added Contributing file.
