--- a/README
+++ b/README
@@ -48,8 +48,8 @@ BUGS
 AUTHOR
     Ingy döt Net <ingy@cpan.org>
 
-Copyright and License
-    Copyright (c) 2004-2014. Ingy döt Net.
+COPYRIGHT AND LICENSE
+    Copyright 2004-2014. Ingy döt Net.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
